adds more UI with fragment for About and color codews

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ dependencies {
     compile 'com.roughike:bottom-bar:2.0.2'
     compile 'com.android.support:support-v4:25.0.0'
     testCompile 'junit:junit:4.12'
+
+    compile 'ayar.oktay.library:advancedtextview:0.4.5'
 }
